--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="arduinosensors.example.com.maps">
+    package="herlon.meeting">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
+         location permissions for the 'MyLocation' functionality. 
     -->
-
-
-    <!-- permissão para acesso a localização -->
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="LOS POGOS APP"
+        android:label="Meeting"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--
-aqui nessa <activity é onde fica a main(e so mudar o name e abrira o activity correspondente/ o label seta o label do app)
-        -->
         <activity
-            android:name=".ActPrincipal"
-            android:label="POG MASTER"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".MainActivity"
+            android:label="Meeting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,35 +37,15 @@ aqui nessa <activity é onde fica a main(e so mudar o name e abrira o activity c
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyDwHn_9gtIqjyEFQfUXRI08Z52A2u5CWJM" />
 
         <activity
             android:name=".MapsActivity"
-            android:label="LOS POGOS APP">
-
-            <!--
-            intent-filter e quem fara a inicialização do main screen,onde ele estiver(entre a <activity e a </activity>) sera a tela principal
-
-            Assim... ou conforme la em cima
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
-
-        </activity>
-        <activity
-            android:name=".Cliente"
-            android:label="POGOS CLIENT" />
-        <activity
-            android:name=".Usuario"
-            android:label="USER POGOS">
+            android:label="@string/title_activity_maps">
 
         </activity>
     </application>
